[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NTarp"
version = "0.0.1"
authors = [{name = "Alden Bradford"}]
description = "The NTarp clustering algorithm"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/AldenMB/NTarp"
